--- a/index.html
+++ b/index.html
@@ -1,2 +1,20 @@
-<center><h1>My First Webpage</h1></center>
-<center><h2>Arsad Refat</h2></center>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <title>My Profile</title>
+    </head>
+    <body>
+        <div align="center">
+            <h1>Arsad Refat</h1>
+            <h2>Software Developer</h2>
+            <hr>
+            <h3>About Me:</h3>
+            <h4>My hometown is Queens, New York.</h4>
+            <h4>My favorite color is red.</h4>
+            <h4>My favorite food is pizza.</h4>
+            <h4>If I could be any animal, I would be a cheetah.</h4>
+        </div>
+        </body>
+        </html>
