--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
             <h4>My favorite food is pizza.</h4>
             <h4>If I could be any animal, I would be a cheetah.</h4>
         </div>
+        <center><p>Dogs are the best!</p></center>
         </body>
         </html>
