created portfolio deom

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h4>My favorite color is red.</h4>
             <h4>My favorite food is pizza.</h4>
             <h4>If I could be any animal, I would be a cheetah.</h4>
+            <p>Dogs are the best!</p>
         </div>
-        <center><p>Dogs are the best!</p></center>
         </body>
         </html>
